src/deal.js
// @generated by Peggy 4.0.2.
//
// https://peggyjs.org/



import {DealRules} from './ast.js'
import {Direction, Vuln} from './card.js'

function suitOps(op, num, suits) {
  let ret = [];
  for (const s of suits) {
    ret.push(`(dir.${s}.length ${op} ${num})`);
  }
  return ret;
}

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { commands: peg$parsecommands };
  var peg$startRuleFunction = peg$parsecommands;

  var peg$c0 = "dealer";
  var peg$c1 = "$";
  var peg$c2 = "=";
  var peg$c3 = "%";
  var peg$c4 = ",";
  var peg$c5 = "north";
  var peg$c6 = "south";
  var peg$c7 = "east";
  var peg$c8 = "west";
  var peg$c9 = "vuln";
  var peg$c10 = "all";
  var peg$c11 = "both";
  var peg$c12 = "ns";
  var peg$c13 = "ew";
  var peg$c14 = "none";
  var peg$c15 = "neither";
  var peg$c16 = "random";
  var peg$c17 = "bid";
  var peg$c18 = "c";
  var peg$c19 = "d";
  var peg$c20 = "h";
  var peg$c21 = "s";
  var peg$c22 = "//";
  var peg$c23 = "!";
  var peg$c24 = "-";
  var peg$c25 = "+";
  var peg$c26 = "balanced5";
  var peg$c27 = "balanced";
  var peg$c28 = "<";
  var peg$c29 = "x";
  var peg$c30 = "M";
  var peg$c31 = "m";
  var peg$c32 = "P";
  var peg$c33 = "R";
  var peg$c34 = "r";
  var peg$c35 = "b";
  var peg$c36 = "any";
  var peg$c37 = "singleton";
  var peg$c38 = "void";
  var peg$c39 = "\r\n";
  var peg$c40 = "\n";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[<>]/;
  var peg$r2 = /^[2-9TJQKA]/;
  var peg$r3 = /^[ \t]/;
  var peg$r4 = /^[\0-\uD7FF\uE000-\uFFFF]/;
  var peg$r5 = /^[\uD800-\uDBFF]/;
  var peg$r6 = /^[\uDC00-\uDFFF]/;

  var peg$e0 = peg$literalExpectation("dealer", false);
  var peg$e1 = peg$literalExpectation("$", false);
  var peg$e2 = peg$literalExpectation("=", false);
  var peg$e3 = peg$literalExpectation("%", false);
  var peg$e4 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e5 = peg$literalExpectation(",", false);
  var peg$e6 = peg$literalExpectation("north", true);
  var peg$e7 = peg$literalExpectation("south", true);
  var peg$e8 = peg$literalExpectation("east", true);
  var peg$e9 = peg$literalExpectation("west", true);
  var peg$e10 = peg$literalExpectation("vuln", false);
  var peg$e11 = peg$literalExpectation("all", true);
  var peg$e12 = peg$literalExpectation("both", true);
  var peg$e13 = peg$literalExpectation("NS", true);
  var peg$e14 = peg$literalExpectation("EW", true);
  var peg$e15 = peg$literalExpectation("none", true);
  var peg$e16 = peg$literalExpectation("neither", true);
  var peg$e17 = peg$literalExpectation("random", true);
  var peg$e18 = peg$literalExpectation("bid", false);
  var peg$e19 = peg$literalExpectation("C", true);
  var peg$e20 = peg$literalExpectation("D", true);
  var peg$e21 = peg$literalExpectation("H", true);
  var peg$e22 = peg$literalExpectation("S", true);
  var peg$e23 = peg$literalExpectation("//", false);
  var peg$e24 = peg$anyExpectation();
  var peg$e25 = peg$literalExpectation("!", false);
  var peg$e26 = peg$literalExpectation("-", false);
  var peg$e27 = peg$literalExpectation("+", false);
  var peg$e28 = peg$literalExpectation("balanced5", false);
  var peg$e29 = peg$literalExpectation("balanced", false);
  var peg$e30 = peg$classExpectation(["<", ">"], false, false);
  var peg$e31 = peg$literalExpectation("<", false);
  var peg$e32 = peg$literalExpectation("X", true);
  var peg$e33 = peg$literalExpectation("M", false);
  var peg$e34 = peg$literalExpectation("m", false);
  var peg$e35 = peg$literalExpectation("P", false);
  var peg$e36 = peg$literalExpectation("R", false);
  var peg$e37 = peg$literalExpectation("r", false);
  var peg$e38 = peg$literalExpectation("b", false);
  var peg$e39 = peg$literalExpectation("any", false);
  var peg$e40 = peg$literalExpectation("singleton", false);
  var peg$e41 = peg$literalExpectation("void", false);
  var peg$e42 = peg$classExpectation([["2", "9"], "T", "J", "Q", "K", "A"], false, false);
  var peg$e43 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e44 = peg$literalExpectation("\r\n", false);
  var peg$e45 = peg$literalExpectation("\n", false);
  var peg$e46 = peg$classExpectation([["\0", "\uD7FF"], ["\uE000", "\uFFFF"]], false, false);
  var peg$e47 = peg$classExpectation([["\uD800", "\uDBFF"]], false, false);
  var peg$e48 = peg$classExpectation([["\uDC00", "\uDFFF"]], false, false);

  var peg$f0 = function() { return rules.toString(); };
  var peg$f1 = function(d) { rules.dealer = d; };
  var peg$f2 = function(d) { rules.dir = d };
  var peg$f3 = function(id, desc) {
    rules.add({[id]: desc});
  };
  var peg$f4 = function(id, nums) {
    rules.add({[id]: nums});
  };
  var peg$f5 = function() { return Direction.NORTH; };
  var peg$f6 = function() { return Direction.SOUTH; };
  var peg$f7 = function() { return Direction.EAST; };
  var peg$f8 = function() { return Direction.WEST; };
  var peg$f9 = function(vuln) { rules.vuln = vuln; };
  var peg$f10 = function() { return Vuln.ALL; };
  var peg$f11 = function() { return Vuln.ALL; };
  var peg$f12 = function() { return Vuln.NS; };
  var peg$f13 = function() { return Vuln.EW; };
  var peg$f14 = function() { return Vuln.NONE; };
  var peg$f15 = function() { return Vuln.NONE; };
  var peg$f16 = function() { return undefined; };
  var peg$f17 = function(bid) {
    rules.bids.push(bid);
  };
  var peg$f18 = function() { return 'clubs'; };
  var peg$f19 = function() { return 'diamonds'; };
  var peg$f20 = function() { return 'hearts'; };
  var peg$f21 = function() { return 'spades'; };
  var peg$f22 = function(desc) { return desc.trim(); };
  var peg$f23 = function(not, parts) {
    rules.add(parts.join(' && '), not?.length ?? 0);
  };
  var peg$f24 = function(min, max) { return `dir.range(${min}, ${max})`; };
  var peg$f25 = function(p, more) {
      if (more) {
        return `(dir.points >= ${p})`;
      } else {
        return `(dir.points === ${p})`
      }
    };
  var peg$f26 = function() { return 'dir.balanced()'; };
  var peg$f27 = function() { return 'dir.balancedNoM()'; };
  var peg$f28 = function(n) { return parseInt(n, 10) <= 37; };
  var peg$f29 = function(suit, id, op, num) {
    return `(Deal.weight(dir.${suit}, ${id}) ${op} ${num})`;
  };
  var peg$f30 = function(id) {
    if (!rules.isVar(id)) {
      error(`Unknown variable: "${id}"`);
    }
    return id;
  };
  var peg$f31 = function(a, op, b) {
    return `(dir.${a}.length ${op} dir.${b}.length)`;
  };
  var peg$f32 = function() { return "==="; };
  var peg$f33 = function(num, plus, suits) {
      const op = plus ? ">=" : "==="
      return '(' + suitOps(op, num, suits).join(' || ') + ')';
    };
  var peg$f34 = function(op, num, suits) {
      return suitOps(op, num, suits).join(' && ');
    };
  var peg$f35 = function(a, b, suits) {
      return suitOps(">=", a, suits).join(' && ') + ' && ' +
        suitOps("<=", b, suits).join(' && ');
    };
  var peg$f36 = function() { return ['clubs', 'diamonds', 'hearts', 'spades'] };
  var peg$f37 = function() { return ['hearts', 'spades'] };
  var peg$f38 = function() { return ['clubs', 'diamonds'] };
  var peg$f39 = function() { return ['diamonds', 'spades'] };
  var peg$f40 = function() { return ['clubs', 'hearts'] };
  var peg$f41 = function() { return ['diamonds', 'hearts'] };
  var peg$f42 = function() { return ['clubs', 'spades'] };
  var peg$f43 = function(any, dist) {
    if (any) {
      return `dir.isShapeAny(${dist.join(', ')})`
    }
    return `dir.isShape(${dist.join(', ')})`
  };
  var peg$f44 = function() {
    return `dir.hasSingleton()`;
  };
  var peg$f45 = function() {
    return `dir.hasVoid()`;
  };
  var peg$f46 = function(sc) {
    return '(' + sc.join(' && ') + ')';
  };
  var peg$f47 = function(cards) {
    return `dir.hasCards('${cards}')`;
  };
  var peg$f48 = function() {};
  var peg$f49 = function() {};
  var peg$f50 = function() {};
  var peg$f51 = function() {};
  var peg$f52 = function() {};
  var peg$f53 = function(c) { return /\p{XID_Start}/u.test(c) };
  var peg$f54 = function(c) { return /\p{XID_Continue}/u.test(c) };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsecommands() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parsecommand();
    if (s4 === peg$FAILED) {
      s4 = null;
    }
    s5 = peg$currPos;
    s6 = peg$parse_();
    s7 = peg$parsecomment();
    if (s7 !== peg$FAILED) {
      s6 = [s6, s7];
      s5 = s6;
    } else {
      peg$currPos = s5;
      s5 = peg$FAILED;
    }
    if (s5 === peg$FAILED) {
      s5 = null;
    }
    s3 = [s3, s4, s5];
    s2 = s3;
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parseCRLF();
      if (s3 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parsecommand();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s6 = peg$currPos;
        s7 = peg$parse_();
        s8 = peg$parsecomment();
        if (s8 !== peg$FAILED) {
          s7 = [s7, s8];
          s6 = s7;
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s4 = [s4, s5, s6];
        s3 = s4;
        s2 = s3;
      } else {
        s2 = s3;
      }
    }
    s2 = peg$parseCRLF();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    peg$savedPos = s0;
    s0 = peg$f0();

    return s0;
  }

  function peg$parsecommand() {
    var s0;

    s0 = peg$parsedealer();
    if (s0 === peg$FAILED) {
      s0 = peg$parsevuln();
      if (s0 === peg$FAILED) {
        s0 = peg$parsehand();
        if (s0 === peg$FAILED) {
          s0 = peg$parsesetVar();
          if (s0 === peg$FAILED) {
            s0 = peg$parsebid();
            if (s0 === peg$FAILED) {
              s0 = peg$parserule();
              if (s0 === peg$FAILED) {
                s0 = peg$parsecomment();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsedealer() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsedir();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsehand() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsedir();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsesetVar() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 36) {
      s1 = peg$c1;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseidentifier();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 61) {
          s4 = peg$c2;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parsedescription();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f3(s2, s6);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 37) {
        s1 = peg$c3;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseidentifier();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 61) {
            s4 = peg$c2;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            s6 = peg$currPos;
            s7 = [];
            s8 = peg$currPos;
            s9 = [];
            s10 = input.charAt(peg$currPos);
            if (peg$r0.test(s10)) {
              peg$currPos++;
            } else {
              s10 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            if (s10 !== peg$FAILED) {
              while (s10 !== peg$FAILED) {
                s9.push(s10);
                s10 = input.charAt(peg$currPos);
                if (peg$r0.test(s10)) {
                  peg$currPos++;
                } else {
                  s10 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e4); }
                }
              }
            } else {
              s9 = peg$FAILED;
            }
            if (s9 !== peg$FAILED) {
              s8 = input.substring(s8, peg$currPos);
            } else {
              s8 = s9;
            }
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = peg$currPos;
              s9 = peg$currPos;
              s10 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 44) {
                s11 = peg$c4;
                peg$currPos++;
              } else {
                s11 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e5); }
              }
              if (s11 !== peg$FAILED) {
                s12 = peg$parse_();
                s10 = [s10, s11, s12];
                s9 = s10;
              } else {
                peg$currPos = s9;
                s9 = peg$FAILED;
              }
              if (s9 !== peg$FAILED) {
                s9 = peg$currPos;
                s10 = [];
                s11 = input.charAt(peg$currPos);
                if (peg$r0.test(s11)) {
                  peg$currPos++;
                } else {
                  s11 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e4); }
                }
                if (s11 !== peg$FAILED) {
                  while (s11 !== peg$FAILED) {
                    s10.push(s11);
                    s11 = input.charAt(peg$currPos);
                    if (peg$r0.test(s11)) {
                      peg$currPos++;
                    } else {
                      s11 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e4); }
                    }
                  }
                } else {
                  s10 = peg$FAILED;
                }
                if (s10 !== peg$FAILED) {
                  s9 = input.substring(s9, peg$currPos);
                } else {
                  s9 = s10;
                }
                if (s9 === peg$FAILED) {
                  peg$currPos = s8;
                  s8 = peg$FAILED;
                } else {
                  s8 = s9;
                }
              } else {
                s8 = s9;
              }
            }
            if (s7.length < 1) {
              peg$currPos = s6;
              s6 = peg$FAILED;
            } else {
              s6 = s7;
            }
            if (s6 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f4(s2, s6);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsedir() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c5) {
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f5();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = input.substr(peg$currPos, 5);
      if (s1.toLowerCase() === peg$c6) {
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f6();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = input.substr(peg$currPos, 4);
        if (s1.toLowerCase() === peg$c7) {
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e8); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f7();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = input.substr(peg$currPos, 4);
          if (s1.toLowerCase() === peg$c8) {
            peg$currPos += 4;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e9); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f8();
          }
          s0 = s1;
        }
      }
    }

    return s0;
  }

  function peg$parsevuln() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsevulnerability();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f9(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }
